--- a/layout_practice/layout2/style.css
+++ b/layout_practice/layout2/style.css
@@ -1,3 +1,19 @@
+.flex-container{
+  display: flex;
+  box-sizing: border-box;
+  padding: 0 20px;
+  width: 100%;
+  height: 80px;
+  background-color: pink;
+  font-size: 30px;
+  color: #fff;
+  align-items: center;
+}
+
+.right{
+  margin-left: auto;
+}
+
 .container{
   background-image: url(./picture.jpg);
   width: 100%;
