--- a/layout9/style.css
+++ b/layout9/style.css
@@ -8,23 +8,34 @@
   background-color: #000;
   color: #fff;
   box-sizing: border-box;
-  transform: translateX(-75px);
+  padding: 15px;
   transition: all 1s;
+  transform: translateX(-75px);
 }
 
 .menu-bar:hover{
   transform: translateX(0px);
 }
 
+.menu-bar:hover .menu{
+  text-align: center;
+}
+
+.menu-bar:hover .item{
+  animation-name: slid;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
 .menu{
   line-height: 100px;
-  transform: translateX(80px);
   font-size: 20px;
+  text-align: right;
 }
 
 .item{
-  transform: translateX(0);
   font-size: 18px;
+  transform: translateX(0);
 }
 
 .btn{
@@ -69,4 +80,10 @@
   0%{transform: rotate(0deg);}
   50%{transform: rotate(-20deg);}
   100%{transform: rotate(50deg) scale(1.5);}
+}
+
+@keyframes slid{
+  0%{transform: translateX(0);}
+  50%{transform: translateX(80px) skew(-20deg);}
+  100%{transform: translateX(40px);}
 }
